# auth_test_task

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
data/: dnd_magic_items.csv
migrations/: env.py
migrations/versions/: ff8181a48a4a_initial_migration.py
src/: config.py  seed.py
src/api/: __init__.py  auth.py  deps.py  exceptions.py  items.py  roles.py  users.py
src/domain/: enums.py  exceptions.py
src/domain/entities/: item.py  role.py  user.py
src/domain/repositories/: item.py  role.py  token.py  user.py
src/infra/: models.py  session.py
src/infra/repositories/: item.py  role.py  token.py  user.py
src/schemas/: auth.py  item.py  role.py  user.py
src/services/: auth.py  items.py  roles.py  users.py
tests/: conftest.py
tests/api/: test_auth_api.py
